# hematite-cli

./: .gitignore  .hematiteignore  CAPABILITIES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  README.md  THIRD_PARTY_NOTICES.md  WORKFLOWS.md  build.rs  bump-version.ps1  clean.ps1  clean.sh  prompt_library.md  release.ps1  start_searx.bat
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: unix-release.yml  windows-release.yml
.hematite/: last_request.json  redact_policy.example.json  rules.md  settings.json  settings.json.example
docs/: ARCHITECTURE.md  SEARXNG_SETUP.md
docs/exec-plans/: README.md  tech-debt-tracker.md
evals/: README.md  prompt_suite.json  quick_smoke.md  real_usage_gauntlet.md  score_template.csv
evals/suites/: core_identity_runtime.json  planning_and_recovery.json  repo_and_tools.json  research_mcp_vision.json  safety_and_workflow.json
installer/: hematite.iss
libs/kokoros/: Cargo.toml  NOTICE  README.md  build.rs
libs/kokoros/src/onn/: ort_base.rs  ort_koko.rs
libs/kokoros/src/tts/: koko.rs  normalize.rs  phonemizer.rs  tokenize.rs
libs/kokoros/src/utils/: debug.rs  fileio.rs  mod.rs  mp3.rs  opus.rs
scratch/: test_routing.rs
scripts/: install-unix.sh  package-unix.sh  package-windows.ps1  setup-searxng.ps1  test-mcp-portable.ps1  test-semantic-live.ps1  verify-doc-sync.ps1  verify-version-sync.ps1
src/: lib.rs  main.rs  runtime.rs  telemetry.rs
src/agent/: architecture_summary.rs  compaction.rs  config.rs  conversation.rs  diagnose.rs  diff_tracker.rs  direct_answers.rs  economics.rs  edge_redact.rs  find_files.rs  fix_recipes.rs  fuzzy.rs  git.rs  git_context.rs  git_monitor.rs  hooks.rs  html_template.rs  inference.rs  instructions.rs  intent_embed.rs  lms.rs  mcp.rs  mcp_manager.rs  mcp_server.rs  mod.rs  ollama.rs  parser.rs  permission_enforcer.rs  policy.rs  pricing.rs  prompt.rs  provider.rs  recovery_recipes.rs  redact_audit.rs  redact_policy.rs  report_export.rs  routing.rs  scheduler.rs  searx_lifecycle.rs  semantic_redact.rs  (+11 more)
src/agent/lsp/: client.rs  manager.rs
src/memory/: deep_reflect.rs  mod.rs  repo_map.rs  vein.rs
src/tools/: code_sandbox.rs  file_edit.rs  file_ops.rs  git.rs  git_onboarding.rs  github.rs  guard.rs  hardening.rs  health.rs  host_inspect.rs  lsp.rs  lsp_tools.rs  mod.rs  plan.rs  project_map.rs  repo_script.rs  research.rs  risk_evaluator.rs  runtime_trace.rs  scoping_tools.rs  search.rs  shell.rs  tasks.rs  tool.rs  tool_schema_cache.rs  toolchain.rs  verify_build.rs  vision.rs  workspace_workflow.rs
src/ui/: gpu_monitor.rs  hatch.rs  mod.rs  modal_review.rs  sleep_inhibitor.rs  terminal.rs  tui.rs  voice.rs
tests/: debug_routing.rs  diagnostics.rs  routing_precision.rs
