[package]
name = "hematite-kokoros"
version = "0.1.2"
edition = "2021"
description = "Hematite-maintained fork of the Kokoros Rust text-to-speech engine"
readme = "README.md"
repository = "https://github.com/undergroundrap/hematite-cli"
homepage = "https://github.com/undergroundrap/hematite-cli"
license = "Apache-2.0"
keywords = ["tts", "kokoro", "voice", "onnx"]
categories = ["multimedia::audio"]

[package.metadata.docs.rs]
# Primary build target for docs.rs; also include Linux for platform-independent paths.
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[lib]
name = "kokoros"
path = "src/lib.rs"

[dependencies]
# NLP & Phonemization (G2P)
misaki-rs = { version = "0.3.0", default-features = false }
# Tensor Runtime (ORT 2.0 Unified)
ort = { version = "2.0.0-rc.12", features = ["directml", "download-binaries", "tls-native-vendored"] }
# Vector Math
ndarray = "0.17"
ndarray-npy = "0.10"
# Utilities
lazy_static = "1.4"
tracing = "0.1"
indicatif = "0.17"
mp3lame-encoder = "0.1.0"
serde_json = "1.0"
regex = "1.10"
wav = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[features]
default = []
